--- a/Fragments/app/src/main/res/layout/activity_chat.xml
+++ b/Fragments/app/src/main/res/layout/activity_chat.xml
@@ -67,13 +67,16 @@
             android:layout_weight="3"
             app:layout_constraintEnd_toStartOf="@id/send"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            android:maxHeight="80dp"
+            android:scrollbars="vertical"/>
 
         <ImageView
             android:id="@+id/send"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/agregar"
+            android:paddingRight="10dp"
+            android:src="@drawable/ic_send"
             android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
