--- a/Fragments/app/src/main/res/layout/fragment_publish.xml
+++ b/Fragments/app/src/main/res/layout/fragment_publish.xml
@@ -71,6 +71,7 @@
             app:layout_constraintTop_toTopOf="@+id/guideline25" />
 
         <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="250dp"
             android:layout_height="40dp"
             android:orientation="horizontal"
@@ -98,17 +99,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
-
                 </LinearLayout>
             </HorizontalScrollView>
-
 
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:src="@drawable/simplearrow" />
-
         </LinearLayout>
 
 
@@ -118,6 +116,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.29" />
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etTitulo"
@@ -130,40 +129,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/constraintContenido"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/PublishContenido"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:hint="Contenido"
+            style="@style/Widget.Material3.TextInputEditText.FilledBox"
             app:layout_constraintBottom_toTopOf="@+id/guideline25"
             app:layout_constraintEnd_toStartOf="@+id/guideline21"
             app:layout_constraintStart_toStartOf="@+id/guideline22"
-            app:layout_constraintTop_toTopOf="@+id/guideline20">
-
-            <com.google.android.material.textfield.TextInputLayout
+            app:layout_constraintTop_toTopOf="@+id/guideline20"
+            android:padding="0dp">
+            <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:gravity="center"
-                android:hint="Contenido"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/PublishContenido"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"/>
-            </com.google.android.material.textfield.TextInputLayout>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline21"
