--- a/Fragments/app/src/main/res/layout/cv_row_publicacion.xml
+++ b/Fragments/app/src/main/res/layout/cv_row_publicacion.xml
@@ -23,19 +23,34 @@
             android:orientation="vertical"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp">
-            <TextView
-                android:id="@+id/CardTema"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:textSize="10sp"
-                android:text="Tema de la publicacion"
-                tools:ignore="SmallSp" />
+
+           <LinearLayout
+               android:layout_width="match_parent"
+               android:layout_height="30dp"
+               android:orientation="horizontal">
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="match_parent"
+                   android:textStyle="bold"
+                   android:text="Titulo publicacion"
+                   android:layout_weight="2"
+                   android:id="@+id/titulo"/>
+               <TextView
+                   android:id="@+id/CardTema"
+                   android:layout_width="wrap_content"
+                   android:layout_height="20dp"
+                   android:textSize="15sp"
+                   android:text="Tema de la publicacion"
+                   tools:ignore="SmallSp" />
+
+           </LinearLayout>
 
             <TextView
                 android:id="@+id/contenidoPublicacion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="texto"
+                android:textSize="20sp"
                 android:textAlignment="center" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -49,7 +64,7 @@
                     android:orientation="horizontal"
                     >
                     <ImageView
-                        android:id="@+id/chipComentarios"
+                        android:id="@+id/ImgComentarios"
                         android:minHeight="35dp"
                         android:padding="5dp"
                         android:src="@drawable/ic_coment"
@@ -98,7 +113,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre User"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:gravity="right"
         android:paddingRight="10dp"
         app:layout_constraintEnd_toEndOf="@+id/cardPublicacion"
