--- a/Fragments/app/src/main/res/layout/activity_registro.xml
+++ b/Fragments/app/src/main/res/layout/activity_registro.xml
@@ -6,6 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".Registro.Registro">
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/menu"
+        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Gender"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/guideline6"
+        app:layout_constraintStart_toStartOf="@+id/guideline11"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2">
+
+        <AutoCompleteTextView
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:inputType="none" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
         android:id="@+id/imageView2"
@@ -42,6 +60,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline4">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputUserNameRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -59,6 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextText3">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputEmailRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -76,6 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextText6">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputPasswordRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -93,26 +114,11 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="35dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/editTextText8"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:hint="Age"
-        android:inputType="text"
-        app:layout_constraintEnd_toStartOf="@+id/guideline6"
-        app:layout_constraintStart_toStartOf="@+id/guideline11"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2">
-
-        <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="35dp" />
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <Button
         android:id="@+id/buttonRegistrarRegister"
