--- a/Fragments/app/src/main/res/layout/activity_comentarios.xml
+++ b/Fragments/app/src/main/res/layout/activity_comentarios.xml
@@ -28,14 +28,15 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/seed"
+        android:elevation="20dp"
+        android:padding="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        android:background="@color/seed"
-        android:padding="5dp"
-        android:elevation="20dp">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
             android:id="@+id/titulo"
@@ -45,22 +46,23 @@
             android:text="Titulo"
             android:textAlignment="center"
             android:textSize="24dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            android:textStyle="bold"/>
+            tools:ignore="MissingConstraints" />
 
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="55dp"
             android:layout_marginRight="25dp"
+            android:paddingTop="10dp"
             android:src="@drawable/ic_hombre"
             app:layout_constraintEnd_toStartOf="@+id/titulo"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints"
-            android:paddingTop="10dp"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/UserName"
@@ -68,34 +70,36 @@
             android:layout_height="wrap_content"
             android:text="UserName"
             android:textSize="14dp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/imageView5"
             app:layout_constraintStart_toStartOf="@+id/imageView5"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5"
-            android:textStyle="bold"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
         <TextView
             android:id="@+id/contenido"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxHeight="180dp"
             android:padding="20dp"
+            android:scrollbars="vertical"
             android:text="Contenido"
             android:textSize="17dp"
-            app:layout_constraintTop_toBottomOf="@+id/UserName"
-            tools:layout_editor_absoluteX="5dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/UserName" />
 
         <ImageView
             android:id="@+id/ImgComentarios"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
+            android:layout_margin="15dp"
             android:minHeight="35dp"
             android:padding="5dp"
             android:src="@drawable/ic_coment"
             app:chipIcon="@drawable/mensajero"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_margin="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/contenido"/>
+            app:layout_constraintTop_toBottomOf="@+id/contenido" />
 
         <TextView
             android:id="@+id/numComentarios"
@@ -104,7 +108,7 @@
             android:layout_gravity="bottom"
             android:text="100"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ImgComentarios"/>
+            app:layout_constraintStart_toEndOf="@+id/ImgComentarios" />
 
         <ImageView
             android:id="@+id/liekButton"
@@ -115,7 +119,7 @@
             android:padding="5dp"
             android:src="@drawable/ic_like"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/numLikes"/>
+            app:layout_constraintEnd_toStartOf="@+id/numLikes" />
 
         <TextView
             android:id="@+id/numLikes"
@@ -126,7 +130,16 @@
             android:text="100"
 
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/commentRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
